--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-        <form action="/" method="POST"> 
+        <form action="/calc-express" method="POST"> 
               <h2 center;">Calculator</h2>
               <input type="text" id="output" name="result" placeholder="0.">
           <div class="form">
